<resources>
    <string name="app_name">登录界面的实现</string>
    <string name="title_activity_login">登录账号</string>
    <string name="title_sign_in">账号密码登录</string>
    <string name="title_register">手机号注册</string>
    <string name="prompt_email">用户名/邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"欢迎！"</string>
    <string name="invalid_username">用户名无效</string>
    <string name="invalid_password">密码必须多于一个字符</string>
    <string name="login_failed">"账号或密码错误"</string>
    <string name="state_forget_password"><a href="https://www.bing.com/">忘记用户名/密码？</a></string>
    <string name="title_quick_login">第三方登录</string>
    <string name="left_enter_password">剩余输入密码次数：</string>
    <string name="lock_login">错误次数已达上限</string>
</resources>