<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_login_background"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/sign_in_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_sign_in"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_layout"
        tools:ignore="MissingConstraints"
        style="@style/TextInputLayout_login"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_title">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            style="@style/EditText_login"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        tools:ignore="MissingConstraints"
        style="@style/TextInputLayout_login"
        app:layout_constraintTop_toBottomOf="@+id/username_layout"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            style="@style/EditText_login"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/username_layout" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state_forget_password"
        android:textColor="@color/colorHrefText"
        app:layout_constraintTop_toBottomOf="@+id/password_layout"
        app:layout_constraintEnd_toEndOf="@+id/password_layout"/>

    <LinearLayout
        android:id="@+id/main_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forget_password_text_view"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/cancel"
            style="@style/quick_login_btn_style"
            android:src="@drawable/button_cancel_icon"
            />

        <ImageButton
            android:id="@+id/language"
            style="@style/quick_login_btn_style"
            android:src="@drawable/button_language_icon"
            />

        <ImageButton
            android:id="@+id/login"
            style="@style/quick_login_btn_style"
            android:src="@drawable/button_sign_in_icon"
            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_btn"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:id="@+id/quick_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/quick_login_btn">

        <View
            android:id="@+id/quick_login_line_left"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/quick_login_title">
        </View>

        <TextView
            android:id="@+id/quick_login_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title_quick_login" />

        <View
            android:id="@+id/quick_login_line_right"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/quick_login_title">
        </View>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/quick_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/quick_login_qq"
            style="@style/quick_login_btn_style"
            android:src="@drawable/button_quick_login_qq_icon"
            />

        <ImageButton
            android:id="@+id/quick_login_wechat"
            style="@style/quick_login_btn_style"
            android:src="@drawable/button_quick_login_wechat_icon"
            />

        <ImageButton
            android:id="@+id/quick_login_sina_weibo"
            style="@style/quick_login_btn_style"
            android:src="@drawable/button_quick_login_sina_weibo_icon"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>